# SpiffCo_Command_Center

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SPEC.md  PROJECT_STATE.md  README.md  claude_prompt.md  docker-compose.yml  fly.toml
assets/: README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  errors.py  main.py
backend/app/admin/: __init__.py  catalog.py  item_catalog.py
backend/app/advisors/: __init__.py  engine.py  service.py
backend/app/analytics/: __init__.py  compute.py  service.py
backend/app/api/: deps.py  ws.py
backend/app/blueprints/: __init__.py  service.py
backend/app/config/: __init__.py  logging_config.py  settings.py
backend/app/connectors/: __init__.py
backend/app/database/: __init__.py  engine.py
backend/app/logistics/: __init__.py  analysis.py  data.py  service.py
backend/app/models/: __init__.py  app_setting.py  base.py  blueprint.py  history.py  map_marker.py  plan.py  user.py
backend/app/offline/: __init__.py  building_map.py  manager.py  provider.py  save_parser.py
backend/app/planner/: __init__.py  gamedata.py  geometry.py  service.py
backend/tests/: conftest.py  test_admin.py  test_advisor.py  test_analytics.py  test_auth.py  test_blueprints.py  test_config.py  test_dashboard.py  test_event_bus.py  test_frm.py  test_frm_config.py  test_frontend_serving.py  test_gamedata.py  test_logistics.py  test_offline.py  test_planner.py  test_power.py  test_production.py  test_scheduler.py  test_system_api.py  test_world.py
(+231 files in other folders)
